--- a/templates/about/awards/index.html
+++ b/templates/about/awards/index.html
@@ -30,7 +30,7 @@
             {% set project = craft.entries.section('projects').relatedTo({ element: award }).one() %}
 
               {% if project %}
-                <td><a href="{{ project.url }}">{{ project.title }}</a></td>
+                <td><a href="{{ project.getUrl() }}">{{ project.title }}</a></td>
               {% endif %}
 
           </tr>
