--- a/templates/contact/index.html
+++ b/templates/contact/index.html
@@ -6,8 +6,8 @@
   <h2 class="font-nav current"><a href="/contact/">Contact</a></h2>
   <ul class="filters semantic-only-list">
     {% for office in officeEntries %}
-      <li class="{{ active(office.url, 'url', 'current') }}">
-        <a href="{{ office.url }}">{{ office.title }}</a>
+      <li class="{{ active(office.getUrl(), 'url', 'current') }}">
+        <a href="{{ office.getUrl() }}">{{ office.title }}</a>
       </li>
     {% endfor %}
   </ul>
@@ -48,9 +48,16 @@
         <li class="row-block separate">
           <article class="module contact-module pad vcard image-wrap location-contact bigclicky">
             {% set image = entry.officeImage.one() %}
-            <div class="image" {% if image %}style="background-image: url('{{ image.getUrl('thumb') }}');"{% endif %}></div>
+            {% if image %}
+              {% set treatedImage = craft.imager.transformImage(image, { width: 800 }) %}
+              {% if treatedImage %}
+                <div class="image" style="background-image: url('{{ treatedImage.getUrl() }}');"></div>
+              {% endif %}
+            {% else %}
+              <div class="image"></div>
+            {% endif %}
             <div class="content">
-              <h1 class="font-p"><a href="{{ entry.url }}" class="fn org url"><span class="organization-name sr-only">AEI</span><span class="organization-unit">{{ entry.title }}</span></a></h1>
+              <h1 class="font-p"><a href="{{ entry.getUrl() }}" class="fn org url"><span class="organization-name sr-only">AEI</span><span class="organization-unit">{{ entry.title }}</span></a></h1>
               <div class="font-details">
                 {% if entry.phoneNumber %}
                   <div class="tel">{{ entry.phoneNumber }}</div>
