--- a/templates/news/_article.html
+++ b/templates/news/_article.html
@@ -3,9 +3,9 @@
   {% if impactType %}
     <div class="category font-details">{{ impactType }}</div>
   {% endif %}
-  <h1 class="title font-h2"><a href="{{ post.url }}">{{ post.title }}</a></h1>
+  <h1 class="title font-h2"><a href="{{ post.getUrl() }}">{{ post.title }}</a></h1>
   <p class="excerpt">{{ post.excerpt ? post.excerpt : post.body | chop(limit=20, unit='w', append='…') }}</p>
-  <a class="button" href="{{ post.url }}">
+  <a class="button" href="{{ post.getUrl() }}">
     <span class="border"></span><span class="extra-corners"></span>
     Read More
     <svg class="icon icon-right-arrow"><use xlink:href="#icon-right-arrow" /></svg>
