--- a/templates/partials/_secondary-header.html
+++ b/templates/partials/_secondary-header.html
@@ -2,7 +2,10 @@
 <div class="hero-wrap">
   <div class="hero-image image-wrap">
     {% if headerImage %}
-      <div class="lazy image" style="background-image: url('');" data-original="{{ headerImage.getUrl('header') }}"></div>
+      {% set treatedImage = craft.imager.transformImage(headerImage, { width: 1600 }) %}
+      {% if treatedImage %}
+        <div class="lazy image" style="background-image: url('');" data-original="{{ treatedImage.getUrl() }}"></div>
+      {% endif %}
     {% endif %}
   </div>
   <div class="row -halves">
