--- a/templates/partials/media-blocks/_image.html
+++ b/templates/partials/media-blocks/_image.html
@@ -1,15 +1,17 @@
 {% set image = block.image[0] ?? null %}
 {% if image %}
-  {% set aspectRatio = 
+  {% set aspectRatio =
     block.width=='full' ? 'landscape' :
-    (block.image[0].getWidth() > block.image[0].getHeight() ? 'landscape' : 'portrait')  
+    (block.image[0].getWidth() > block.image[0].getHeight() ? 'landscape' : 'portrait')
   %}
+  {% set imageWidth = block.width == 'full' ? 1600 : 800 %}
+  {% set treatedImage = craft.imager.transformImage(image, { width: imageWidth }) %}
 {% endif %}
 
 <div class="module image-module -{{ block.width }}">
   <div class="image-wrap -{{ aspectRatio ?? 'landscape' }}">
-    {% if image %}
-      <div class="image lazy" style="background-image: url('');" data-original="{{ image.getUrl( block.width=='full' ? 'header' : 'thumb') }}"></div>
+    {% if image and treatedImage %}
+      <div class="image lazy" style="background-image: url('');" data-original="{{ treatedImage.getUrl() }}"></div>
     {% endif %}
   </div>
   {% if block.caption %}
