--- a/templates/people/_entry.html
+++ b/templates/people/_entry.html
@@ -11,7 +11,7 @@
   <ul class="filters semantic-only-list">
     {% for cat in craft.categories.group('peopleTypes').all() %}
       <li class="{% if (personType and cat.id == personType.id) or (cat.id in secondaryPersonTypeIds) %}active{% endif %}">
-        <a href="{{ cat.url }}">{{ cat.title }}</a>
+        <a href="{{ cat.getUrl() }}">{{ cat.title }}</a>
       </li>
     {% endfor %}
   </ul>
@@ -23,7 +23,10 @@
     <div class="hero-wrap">
       <div class="hero-image image-wrap">
         {% if headerImage %}
-          <div class="lazy image" style="background-image: url('');" data-original="{{ headerImage.getUrl('header') }}"></div>
+          {% set treatedImage = craft.imager.transformImage(headerImage, { width: 1600 }) %}
+          {% if treatedImage %}
+            <div class="lazy image" style="background-image: url('');" data-original="{{ treatedImage.getUrl() }}"></div>
+          {% endif %}
         {% endif %}
       </div>
     </div>
