--- a/templates/people/index.html
+++ b/templates/people/index.html
@@ -38,8 +38,8 @@
   <h2 class="font-nav {{ (category is not defined) ? 'current' : '' }}"><a href="/people/">People</a></h2>
   <ul class="filters semantic-only-list">
     {% for cat in craft.categories.group('peopleTypes').all() %}
-      <li class="{{ active(cat.url, 'url', 'current') }}">
-        <a href="{{ cat.url }}">{{ cat.title }}</a>
+      <li class="{{ active(cat.getUrl(), 'url', 'current') }}">
+        <a href="{{ cat.getUrl() }}">{{ cat.title }}</a>
       </li>
     {% endfor %}
   </ul>
@@ -72,8 +72,8 @@
               <a href="/people/">All</a>
             </li>
             {% for cat in craft.categories.group('peopleTypes').all() %}
-              <li class="{{ active(cat.url, 'url', 'current') }}">
-                <a href="{{ cat.url }}">{{ cat.title }}</a>
+              <li class="{{ active(cat.getUrl(), 'url', 'current') }}">
+                <a href="{{ cat.getUrl() }}">{{ cat.title }}</a>
               </li>
             {% endfor %}
           </ul>
