--- a/templates/services/_article.html
+++ b/templates/services/_article.html
@@ -2,10 +2,13 @@
   <div class="image-wrap -square">
     {% set image = service.serviceImage.one() %}
     {% if image %}
-      <div class="lazy image" style="background-image: url('');" data-original="{{ image.getUrl('thumb') }}"></div>
+      {% set treatedImage = craft.imager.transformImage(image, { width: 800 }) %}
+      {% if treatedImage %}
+        <div class="lazy image" style="background-image: url('');" data-original="{{ treatedImage.getUrl() }}"></div>
+      {% endif %}
     {% endif %}
   </div>
   <div class="text pad">
-    <h1 class="name font-p no-margin"><a href="{{ service.url }}">{{ service.title }}</a></h1>
+    <h1 class="name font-p no-margin"><a href="{{ service.getUrl() }}">{{ service.title }}</a></h1>
   </div>
 </article>
