--- a/templates/services/_entry.html
+++ b/templates/services/_entry.html
@@ -6,8 +6,8 @@
   <h2 class="font-nav"><a href="/services/">Services</a></h2>
   <ul class="filters semantic-only-list">
     {% for cat in craft.categories.group('services').all() %}
-      <li class="{{ active(cat.url, 'url', 'current') }}">
-        <a href="{{ cat.url }}">{{ cat.title }}</a>
+      <li class="{{ active(cat.getUrl(), 'url', 'current') }}">
+        <a href="{{ cat.getUrl() }}">{{ cat.title }}</a>
       </li>
     {% endfor %}
   </ul>
