--- a/templates/services/index.html
+++ b/templates/services/index.html
@@ -4,8 +4,8 @@
   <h2 class="font-nav {{ (category is not defined) ? 'current' : '' }}"><a href="/services/">Services</a></h2>
   <ul class="filters semantic-only-list">
     {% for cat in craft.categories.group('services').all() %}
-      <li class="{{ active(cat.url, 'url', 'current') }}">
-        <a href="{{ cat.url }}">{{ cat.title }}</a>
+      <li class="{{ active(cat.getUrl(), 'url', 'current') }}">
+        <a href="{{ cat.getUrl() }}">{{ cat.title }}</a>
       </li>
     {% endfor %}
   </ul>
