show opening quote in carousels by removing default hidden-outside-carousel styles

--- a/web/assets/scss/components/_media-blocks.scss
+++ b/web/assets/scss/components/_media-blocks.scss
@@ -267,6 +267,11 @@
 .quotes-module {
   padding: $padding $padding $padding #{$padding - 10px};
 
+  // Show overhanging quotes, since carousel is fade in/out this works
+  .slick-list {
+    overflow: visible;
+  }
+
   @include media-lg {
     padding: $padding-lg $padding-lg $padding-lg #{$padding-lg - 9px};
   }
