--- a/templates/partials/_secondary-header.html
+++ b/templates/partials/_secondary-header.html
@@ -4,7 +4,7 @@
     {% if headerImage %}
       {% set treatedImage = craft.imager.transformImage(headerImage, { width: 1600 }) %}
       {% if treatedImage %}
-        <div class="lazy image" style="background-image: url('');" data-original="{{ treatedImage.getUrl() }}"></div>
+        <div class="lazy image" style="background-image: url(''); background-position: center {{ headerImage.getFocalPoint()['y'] * 100 }}%" data-original="{{ treatedImage.getUrl() }}"></div>
       {% endif %}
     {% endif %}
   </div>
