--- a/templates/partials/_seo.html
+++ b/templates/partials/_seo.html
@@ -1,43 +1,39 @@
-{# SEO Start #}
-	{%- if seo is not defined and entry is defined and entry["seo"] is defined and entry.seo is iterable %}
-		{% set seo = entry.seo %}
-	{% endif %}
-	{% if seo is not defined or seo is null or seo.title == "" %}
-		{% set seo = craft.seo.custom(siteName, '', false) %}
-	{% endif -%}
+{%- if seo is not defined and entry is defined and entry["seo"] is defined and entry.seo is iterable %}
+  {% set seo = entry.seo %}
+{% endif %}
+{%- if seo is not defined or seo is null or seo.title == "" %}
+  {% set seo = craft.seo.custom(siteName, '', false) %}
+{% endif -%}
+{% set social = craft.seo.social(seo) %}
+{% set locale = craft.app.locale %}
+{% set locales = craft.app.i18n.siteLocaleIds|without(locale) %}
+{%- if seo_image is not defined %}
+  {% set seo_image = '' %}
+{% endif %}
 
-	{% set social = craft.seo.social(seo) %}
-	{% set locale = craft.app.locale %}
-	{% set locales = craft.app.i18n.siteLocaleIds|without(locale) %}
-	{% if seo_image is not defined %}
-		{% set seo_image = '' %}
-	{% endif %}
+  <title>{% if title is defined %}{{ title }} | {{ siteName }}{% else %}{{ seo.title }}{% endif %}</title>
+  <meta name="description" content="{% if seo_description is defined and seo_description != '' %}{{ seo_description }}{% else %}{{ seo.description }}{% endif %}" />
 
+  {% set fb = social.facebook -%}
+  <meta property="fb:app_id" content="323796168167088">
+  <meta property="og:url" content="{{ craft.app.request.absoluteUrl }}" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="{{ fb.title }}" />
+  <meta property="og:image" content="{% if seo_image %}{{ seo_image }}{% else %}{{ craft.seo.facebookImage(fb.image) }}{% endif %}" />
+  <meta property="og:description" content="{% if seo_description is defined and seo_description != '' %}{{ seo_description }}{% else %}{{ fb.description }}{% endif %}" />
+  <meta property="og:site_name" content="{{ seo.title }}" />
+  <meta property="og:locale" content="{{ locale }}" />
+  {% for locale in locales -%}
+    <meta property="og:locale:alternate" content="{{ locale }}" />
+  {% endfor %}
 
-	<title>{% if title is defined %}{{ title }} | {{ siteName }}{% else %}{{ seo.title }}{% endif %}</title>
-	<meta name="description" content="{% if seo_description is defined and seo_description != '' %}{{ seo_description }}{% else %}{{ seo.description }}{% endif %}" />
+  {% set tw = social.twitter -%}
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="AEITweets" />
+  <meta name="twitter:url" content="{{ craft.app.request.absoluteUrl }}" />
+  <meta name="twitter:title" content="{{ tw.title }}" />
+  <meta name="twitter:description" content="{% if seo_description is defined and seo_description != '' %}{{ seo_description }}{% else %}{{ tw.description }}{% endif %}" />
+  <meta name="twitter:image" content="{% if seo_image %}{{ seo_image }}{% else %}{{ craft.seo.twitterImage(tw.image) }}{% endif %}" />
 
-	{% set fb = social.facebook -%}
-	<meta property="fb:app_id" content="{# TODO: Facebook App ID #}">
-	<meta property="og:url" content="{{ craft.app.request.absoluteUrl }}" />
-	<meta property="og:type" content="website" />
-	<meta property="og:title" content="{{ fb.title }}" />
-	<meta property="og:image" content="{% if seo_image %}{{ seo_image }}{% else %}{{ craft.seo.facebookImage(fb.image) }}{% endif %}" />
-	<meta property="og:description" content="{% if seo_description is defined and seo_description != '' %}{{ seo_description }}{% else %}{{ fb.description }}{% endif %}" />
-	<meta property="og:site_name" content="{{ seo.title }}" />
-	<meta property="og:locale" content="{{ locale }}" />
-	{% for locale in locales -%}
-		<meta property="og:locale:alternate" content="{{ locale }}" />
-	{% endfor %}
-
-	{% set tw = social.twitter -%}
-	<meta name="twitter:card" content="summary_large_image" />
-	<meta name="twitter:site" content="{# TODO: Twitter Handle  #}" />
-	<meta name="twitter:url" content="{{ craft.app.request.absoluteUrl }}" />
-	<meta name="twitter:title" content="{{ tw.title }}" />
-	<meta name="twitter:description" content="{% if seo_description is defined and seo_description != '' %}{{ seo_description }}{% else %}{{ tw.description }}{% endif %}" />
-	<meta name="twitter:image" content="{% if seo_image %}{{ seo_image }}{% else %}{{ craft.seo.twitterImage(tw.image) }}{% endif %}" />
-
-	<link rel="home" href="{{ siteUrl }}" />
-	<link rel="canonical" href="{{ craft.app.request.absoluteUrl }}">
-{# SEO End #}
+  <link rel="home" href="{{ siteUrl }}" />
+  <link rel="canonical" href="{{ craft.app.request.absoluteUrl }}">
