change related impact to related news & insights, change office leaders -> office contacts, change name's recent projects -> project examples

--- a/templates/partials/_related-impact.html
+++ b/templates/partials/_related-impact.html
@@ -3,7 +3,7 @@
     <div class="row -single">
       <div class="row-block">
         <div class="module text-module ">
-          <h3 class="font-h2">{{ relatedPostsTitle ?? 'Related Impact' }}</h3>
+          <h3 class="font-h2">News &amp; Insights</h3>
         </div>
       </div>
     </div>
