--- a/templates/offices/_entry.html
+++ b/templates/offices/_entry.html
@@ -73,7 +73,7 @@
           {% endif %}
           {% if entry.officeLeaders|length %}
             <div class="meta-item -full">
-              <h3>Office Leaders</h3>
+              <h3>Office Contacts</h3>
               <div class="content -spaced">
                 <ul class="semantic-only-list">
                   {% for leader in entry.officeLeaders.all() %}
