pull 4 related projects when viewing single project, order related posts by featured then postDate

--- a/templates/people/_entry.html
+++ b/templates/people/_entry.html
@@ -95,7 +95,7 @@
   {% set relatedProjects = craft.entries.section('projects').relatedTo({
      targetElement: entry,
      field: 'projectLeaders.aeiPerson',
-  }).all() %}
+  }).orderBy('featured DESC, postDate DESC').limit(4) %}
   {% include 'partials/_related-projects'
     with {
       'relatedProjects': relatedProjects,
@@ -103,11 +103,10 @@
     }
   %}
 
-
   {% set relatedPosts = craft.entries.section('impact').relatedTo({
      targetElement: entry,
      field: 'impactPeople.aeiPerson',
-  }).all() %}
+  }).orderBy('featured DESC, postDate DESC').limit(2) %}
 
   {% include 'partials/_related-impact' with { 'relatedPosts': relatedPosts } %}
 
